--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ p {
   background: url('bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100svh;
+  height: 100dvh;
   margin: 0;
   display: flex;
   color: white
@@ -26,7 +26,7 @@ p {
 
 .today-panel {
   width: 500px;
-  height:fit-content;
+  height: fit-content;
   margin: 20px;
   border-radius: 30px;
   display: flex;
@@ -55,6 +55,10 @@ p {
 .temp-unit {
   font-weight: 300;
   font-size: 0.7em;
+  margin-left: 0.1em;
+  vertical-align: top;
+  margin-top: 0.12em;
+  display: inline-block;
 }
 
 .location {
@@ -65,6 +69,7 @@ p {
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(2, 200px);
+  max-width: 410px;
   /* margin-top: 15px; */
 }
 
