--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,11 @@ p {
   margin: 0;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
 .main-wrapper {
   background: url('bg.jpg');
   background-repeat: no-repeat;
@@ -15,7 +20,8 @@ p {
   height: 100dvh;
   margin: 0;
   display: flex;
-  color: white
+  color: white;
+  justify-content: center;
 }
 
 .frosted-glass {
@@ -27,7 +33,8 @@ p {
 .today-panel {
   width: 500px;
   height: fit-content;
-  margin: 20px;
+  /* margin: 20px; */
+  margin-top: 20px;
   border-radius: 30px;
   display: flex;
   gap: 10px;
@@ -45,6 +52,31 @@ p {
   grid-row: 1 / 3;
   font-size: 80px;
   justify-self: left;
+}
+
+.status-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.top-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.top-btn {
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 5px;
+  border-radius: 10px;
+  font-size: 1.5em;
+  height: fit-content;
+  display: flex;
+}
+
+.top-btn p {
+  font-weight: 300;
+  font-size: 0.85em;
+  margin: 0 2px;
 }
 
 .today-temp {
@@ -68,9 +100,7 @@ p {
 .today-extras {
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(2, 250px);
-  max-width: 410px;
-  /* margin-top: 15px; */
+  grid-template-columns: repeat(2, 270px);
 }
 
 .test {
@@ -105,3 +135,85 @@ p {
   margin-left: -3px;
 }
 
+.overlay {
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  height: 100dvh;
+  width: 100dvw;
+  z-index: 1;
+  display: flex;
+  backdrop-filter: blur(10px);
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.search-popup {
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 15px;
+  height: fit-content;
+  max-width: 530px;
+  width: 100%;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 12px;
+}
+
+.location-box {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 15px;
+  display: flex;
+  height: 40px;
+  overflow: hidden;
+}
+
+.text {
+  border: none;
+  padding: 5px 20px;
+  border-radius: 10px;
+  background-color: transparent;
+  outline: none;
+  flex-grow: 1;
+}
+
+.submit-btn {
+  background-color: white;
+  /* border: 2px solid rgb(217, 217, 217); */
+  border: none;
+  box-shadow: 0px 0px 10px 1px rgb(139, 139, 139);
+  border-radius: 15px;
+  padding: 0px 20px;
+}
+
+.header-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.close-btn {
+  color: black;
+  background-color: white;
+  height: fit-content;
+  font-size: 1.5em;
+  padding: 5px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading {
+  margin: 0;
+}
+
+/* .error-text {
+  color: rgb(143, 0, 0);
+} */
+
+.hidden {
+  visibility: hidden;
+}
