--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,8 @@ a {
   color: white;
   justify-content: center;
   align-content: center;
+  margin-top: 20px;
+  gap: 10px;
 }
 
 .frosted-glass {
@@ -38,7 +40,6 @@ a {
 .today-panel {
   max-width: 550px;
   height: fit-content;
-  margin-top: 20px;
   border-radius: 30px;
   display: flex;
   gap: 10px;
@@ -139,6 +140,7 @@ a {
 .overlay {
   background-color: rgba(0, 0, 0, 0.2);
   position: absolute;
+  top: 0;
   height: 100dvh;
   width: 100dvw;
   z-index: 1;
@@ -249,10 +251,19 @@ a {
 }
 
 .daily-forecast {
-  margin-top: 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+@media (min-width: 1000px) {
+  .main-wrapper {
+    flex-direction: row;
+  }
+
+  .daily-card {
+    min-width: 400px;
+  }
 }
 
 @media (max-width: 560px) {
