--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,15 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background: url('bg.jpg');
+  background-image: url('bg_m.jpg');
+  background-image: -webkit-image-set(
+    url("./bg_s.jpg") 1x,
+    url("./bg_m.jpg") 2x,
+    url("./bg.jpg") 3x);
+  background-image: image-set(
+    url("./bg_s.jpg") 1x,
+    url("./bg_m.jpg") 2x,
+    url("./bg.jpg") 3x);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -27,7 +35,7 @@ a {
   color: white;
   justify-content: center;
   align-content: center;
-  margin-top: 20px;
+  margin: 20px 0px;
   gap: 10px;
 }
 
