Fix overlay position

--- a/src/styles.css
+++ b/src/styles.css
@@ -149,6 +149,7 @@ a {
   background-color: rgba(0, 0, 0, 0.2);
   position: absolute;
   top: 0;
+  left: 0;
   height: 100dvh;
   width: 100dvw;
   z-index: 1;
