--- a/src/styles.css
+++ b/src/styles.css
@@ -40,8 +40,8 @@ a {
 }
 
 .frosted-glass {
-  backdrop-filter: blur(10px);
-  background-color: rgba(0, 0, 0, 0.3);
+  /* backdrop-filter: blur(10px); */
+  background-color: rgba(0, 0, 0, 0.5);
   box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
 }
 
